<resources>
    <string name="app_name">CarsRental</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="reservation">Reservation</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="welcome_to_carsrental">Welcome to CarsRental</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup">Signup</string>
    <string name="driving_license_id">Driving License ID</string>
    <string name="signin">Signin</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup_to_continue">Signup to continue</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="brand">Brand</string>
</resources>